# lb-video-streaming

./: .env.example  ARCHITECTURE.md  Cargo.toml  README.md
migrations/: 20260330070940_initial.sql
src/: config.rs  db.rs  ffprobe.rs  main.rs  r2_storage.rs  storage.rs  video_repository.rs
src/api/: errors.rs  health.rs  mod.rs  state.rs  tests.rs  upload.rs  video.rs
src/domain/: api_path.rs  media_keys.rs  media_metadata.rs  mod.rs  raw_upload_key.rs  upload_content_type.rs  upload_size.rs  video_status.rs
src/file_transfer/: mod.rs  port.rs
src/media_probe/: mod.rs  port.rs
src/media_transcoder/: mod.rs  port.rs
src/repository/: mod.rs  port.rs
src/shared/: mod.rs  video_test_utils.rs
src/storage/: mod.rs  port.rs
src/worker/: mod.rs  processor.rs
ui/: package-lock.json  package.json
ui/src/: App.svelte  app.css
