[package]
name = "lab-base-streaming"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
envy = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
# TODO: replace full with relevant features
tokio = { version = "1", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "macros"] }
aws-sdk-s3 = { version = "1.127.0", features = ["behavior-version-latest"] }
# Required for Credentials::new() to inject R2 static key/secret at runtime.
# The hardcoded-credentials feature is not enabled by default in aws-sdk-s3.
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = { version = "1", features = ["serde"] }
mime = "0.3"
url = { version = "2", features = ["serde"] }
serde_json = "1"

[dev-dependencies]
