[package]
name = "lab-base-streaming"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "macros", "process", "signal", "rt-multi-thread"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "macros"] }
aws-sdk-s3 = { version = "1.127.0", features = ["behavior-version-latest"] }
# Required for Credentials::new() to inject R2 static key/secret at runtime.
# The hardcoded-credentials feature is not enabled by default in aws-sdk-s3.
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = { version = "1", features = ["serde"] }
mime = "0.3"
url = { version = "2", features = ["serde"] }
serde_json = "1"
async-trait = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
tempfile = "3.27.0"
reqwest = { version = "0.13.2", features = ["stream"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
backon = "1.6.0"
failsafe = "1.3.0"

[dev-dependencies]
mockall = "0.14"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6.5"
